--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zephyr-stock-exchange",
+  "name": "satna-stock-exchange",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
