New files from Fly.io Launch

--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for remote-stock-exchange on 2025-09-05T14:52:20Z
+# fly.toml app configuration file generated for remote-stock-exchange on 2025-10-07T16:17:54Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -9,21 +9,12 @@ primary_region = 'bom'
 [build]
 
 [http_service]
-  internal_port = 3000
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 0
   processes = ['app']
-
-[checks]
-  [checks.alive]
-    grace_period = "10s"
-    interval = "30s"
-    method = "GET"
-    timeout = "5s"
-    path = "/api/status"
-    type = "http"
 
 [[vm]]
   memory = '1gb'
