--- a/fly.toml
+++ b/fly.toml
@@ -11,10 +11,16 @@ primary_region = 'bom'
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 1
+  max_machines_running = 1
   processes = ['app']
+  
+  [http_service.concurrency]
+    type = "connections"
+    hard_limit = 1000
+    soft_limit = 500
 
 [env]
   PORT = "3000"
@@ -22,14 +28,14 @@ primary_region = 'bom'
 [checks]
   [checks.alive]
     grace_period = "30s"
-    interval = "30s"
+    interval = "120s"
     method = "GET"
     timeout = "10s"
     path = "/health"
     type = "http"
 
 [[vm]]
-  memory = '1gb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
+  memory_mb = 256
