--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,51 @@
-# Firebase Service Account Keys
+# Firebase Service Account Keys (CRITICAL - Never commit these!)
 *-firebase-adminsdk-*.json
 serviceAccountKey.json
 firebase-adminsdk-*.json
+remotestockexchange-firebase-adminsdk-*.json
 
 # Environment variables
 .env
 .env.local
+.env.*.local
 
 # Node modules
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Logs
 *.log
-npm-debug.log*
+logs/
+*.log.*
 
 # OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+Desktop.ini
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+
+# Build outputs
+dist/
+build/
+*.tsbuildinfo
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
