--- a/fly.toml
+++ b/fly.toml
@@ -11,7 +11,7 @@ primary_region = 'bom'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = 'off'
   auto_start_machines = true
   min_machines_running = 1
   processes = ['app']
@@ -29,12 +29,12 @@ primary_region = 'bom'
     grace_period = "30s"
     interval = "120s"
     method = "GET"
-    timeout = "10s"
+    timeout = "15s"
     path = "/health"
     type = "http"
 
 [[vm]]
-  memory = '1gb'
+  memory = '2gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
+  memory_mb = 2048
